tests/invalid/syntax/let_missing_name.fig
// INVALID: let with no name
// Expected parse error: identifier required
let = 10
